--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "food-delivery-order-tracker",
+  "name": "bitcoin-bloackchain-ticker",
   "sideEffects": false,
   "version": "0.0.1",
   "private": true,
@@ -57,8 +57,6 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.0",
-    "redux": "^4.0.4",
-    "socket.io": "^2.2.0",
-    "socket.io-client": "^2.2.0"
+    "redux": "^4.0.4"
   }
 }
